# dify_tools_api

./: README.md  custom_synonym.json  generate_openapi.py  pyproject.toml
dify_tools/: main.py  router.py
dify_tools/functions/: __init__.py
dify_tools/functions/synonym/: __init__.py  main.py
dify_tools/schemas/: __init__.py  synonym_schemas.py
